2005-07-18  Tom Tromey  <tromey@redhat.com>

	* lib/Makefile.gcj (%.stamp): Added -MP.

2005-07-18  Tom Tromey  <tromey@redhat.com>

	* include/.cvsignore: Removed jni.h.

2005-07-18  Tom Tromey  <tromey@redhat.com>

	* native/jni/classpath/classpath_jawt.h: Updated copyright
	header.

2005-07-18  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/imageio/stream/ImageInputStream.java: added import to fix
	minor API doc problems.

2005-07-18  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(paint): Only paint border if using MetalL&F
	(mouseClicked): Check that control icons exist
	(paintNonLeaf): Changed to paint icon depending on height
	(hasControlIcons): Implemented to return true if control icons exist

2005-07-18  Lillian Angel  <langel@redhat.com>
	* javax/swing/plaf/basic/BasicTreeUI.java
	(paint): Implemented painting of border around selected path
	(mouseClicked): Fixed clicking of icon

2005-07-18  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): changed Slider.thumbWidth.
	* javax/swing/plaf/basic/BasicSliderUI.java
	(paintThumb): fixed thumb painting.

2005-07-17  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/ThreadPolicyValue.java,
        org/omg/PortableServer/IdAssignmentPolicy.java,
        org/omg/PortableServer/IdUniquenessPolicyOperations.java,
        org/omg/PortableServer/IdAssignmentPolicyOperations.java,
        org/omg/PortableServer/IdUniquenessPolicy.java,
        org/omg/PortableServer/ImplicitActivationPolicyOperations.java,
        org/omg/PortableServer/LifespanPolicyOperations.java,
        org/omg/PortableServer/LifespanPolicy.java,
        org/omg/PortableServer/ImplicitActivationPolicy.java,
        org/omg/PortableServer/ServantRetentionPolicy.java,
        org/omg/PortableServer/RequestProcessingPolicy.java,