@@ -1,3 +1,10 @@
+2005-07-18  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* javax/swing/plaf/basic/BasicMenuUI.java:
+	(getMaximumSize): Added check for this menu not being a top level menu.
+	If that's the case, return the maximum size as if it were a regular
+	JMenuItem.
+
 2005-07-18  Tom Tromey  <tromey@redhat.com>
 
 	* lib/Makefile.gcj (%.stamp): Added -MP.
